have divs in place and scrolling horizontally, content next

--- a/index.html
+++ b/index.html
@@ -14,16 +14,15 @@
   <script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
 </head>
 <body>
-  <div class="horizontal-scroll-wrapper squares">
-    <div>item 1</div>
-    <div>item 2</div>
-    <div>item 3</div>
-    <div>item 4</div>
-    <div>item 5</div>
-    <div>item 6</div>
-    <div>item 7</div>
-    <div>item 8</div>
+  <div id="container">
+  <div id="container2">
+    <div class="box one"><div>
+
+    </div></div>
+    <div class="box two"><div>2</div></div>
+    <div class="box three"><div>3</div></div>
+    <div class="box four"><div>Last</div></div>
   </div>
-    
+</div>
 </body>
 </html>
